WebServices Yazıldi-Veriler Çekildi

--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -42,10 +42,11 @@
                 android:id="@+id/tv_capital"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="16dp"
                 android:text="Capital :"
-                app:layout_constraintStart_toEndOf="@+id/iv_countryFlag"
+                android:textStyle="normal"
+                app:layout_constraintStart_toEndOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/tv_countryName" />
 
             <TextView
@@ -53,27 +54,50 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Population :"
-                app:layout_constraintStart_toStartOf="@+id/tv_capital"
+                android:text="Population "
+                app:layout_constraintStart_toEndOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/tv_capital" />
 
             <TextView
-                android:id="@+id/tv_languages"
+                android:id="@+id/tv_borders"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Language : "
-                app:layout_constraintStart_toStartOf="@+id/tv_population"
+                android:text="Borders"
+                app:layout_constraintStart_toEndOf="@+id/textView3"
                 app:layout_constraintTop_toBottomOf="@+id/tv_population" />
 
             <TextView
-                android:id="@+id/tv_currency"
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="16dp"
+                android:text="Capital :"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/iv_countryFlag"
+                app:layout_constraintTop_toBottomOf="@+id/tv_countryName" />
+
+            <TextView
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Currency :"
-                app:layout_constraintStart_toStartOf="@+id/tv_languages"
-                app:layout_constraintTop_toBottomOf="@+id/tv_languages" />
+                android:text="Population :"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Borders: "
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
