--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Population "
+                android:layout_marginRight="10dp"
                 app:layout_constraintStart_toEndOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/tv_capital" />
 
@@ -64,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Borders"
+                android:layout_marginRight="10dp"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
                 app:layout_constraintTop_toBottomOf="@+id/tv_population" />
 
